--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,5 +1,5 @@
 browser = chrome
-url = https://awesomeqa.com/ui/index.php?route=account/login
+url = https://naveenautomationlabs.com/opencart/index.php?route=account/login
 username = praveen@hotmail.com
 password = Test@123
 headless = false
