added code for options manager and multi env set up

--- a/src/test/resources/config/stage.config.properties
+++ b/src/test/resources/config/stage.config.properties
@@ -1,6 +1,6 @@
 browser = chrome
 url = https://naveenautomationlabs.com/opencart/index.php?route=account/login
-username = praveen@hotmail.com
+username = kumar@hotmail.com
 password = Test@123
 headless = false
 incognito = true
